--- a/style.css
+++ b/style.css
@@ -43,7 +43,19 @@ form{
     margin-top:10px;
     margin-bottom:13px;
     padding:5.8px;
-    width:285px;
+    width:290px;
     height:20px;
     box-shadow:0 0 15px rgba(51,51,51,0.8)
+}
+/*for mobile devices*/
+@media (max-width:641px){
+    div{
+        margin:10px;
+        padding:5px;
+        max-width:300px;
+        margin-bottom:250px;
+    }
+    #result{
+        width:270px;
+    }
 }
