--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ div{
     margin-top:80px;
     text-align:center;
     max-width:300px;
+    margin-right:10px;
+    margin-left:10px;
 }
 h2{
     color:#1d3557;
@@ -31,12 +33,16 @@ h2{
 form{
     margin:2px;
    flex-direction:column;
+  
 }
 
 #calculateBMI{
     background-color:#0d94ca;
     border:none;
     cursor:pointer;
+    width:315px;
+    padding:5.8px;
+    border-radius:3px;
 }
 
 #result{
@@ -45,7 +51,11 @@ form{
     padding:5.8px;
     width:290px;
     height:20px;
-    box-shadow:0 0 15px rgba(51,51,51,0.8)
+    background-color:rgba(51,51,51,0.12);
+    border-radius:3px;
+    color:#1d3557;
+    font-size:18px;
+
 }
 /*for mobile devices*/
 @media (max-width:641px){
@@ -57,5 +67,6 @@ form{
     }
     #result{
         width:270px;
+    
     }
 }
