--- a/style.css
+++ b/style.css
@@ -58,11 +58,11 @@ form{
 
 }
 /*for mobile devices*/
-@media (max-width:641px){
+@media (max-width:641){
     div{
         margin:10px;
-        padding:5px;
-        max-width:300px;
+        padding:20px;
+        max-width:400px;
         margin-bottom:250px;
     }
     #result{
